rnsc/test_data/integration/error/parser/type_hints/fieldref/no_operand_3_recovers.rns
.class   @fieldref MyClass fieldName
blabla ; <- should be still reported as an error
